Fixed the issue of horizontal scrolll when the viewport width is narrow such as 320px. With this fix, the horizontal scroll does not happen until the viewport shrinks all the way to 190px + some font size adjustment in Hero.jsx and About.jsx

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
 @theme {
     --font-sans: 'Albert Sans', system-ui, sans-serif;
     /* Font Size */
-    --text-impact: clamp(3.5rem, 9vw, 7rem); /* 56px → 112px */
+    --text-impact: clamp(3rem, 9vw, 7rem); /* 48px → 112px */
     --text-h1: 1.875rem; /* 30px */
     --text-h1-md: 2.25rem; /* 36px */
     --text-h2: 1.5rem; /* 24px */
